Fix #70 Make navbar static on mobile

--- a/site/web/app/themes/sd-theme/resources/assets/styles/components/_navbar.scss
+++ b/site/web/app/themes/sd-theme/resources/assets/styles/components/_navbar.scss
@@ -1,6 +1,10 @@
 #main-header {
   @extend .sticky-top;
 
+  @include media-breakpoint-down(lg) {
+    position: static;
+  }
+
   .custom-logo-link {
     // Apply the important stuff from navbar-brand
     @extend .navbar-brand;
